# saeCalculator

./: .gitignore  AGENTS.md  HANDOFF.md  README.md  openInCursor.cmd  pyproject.toml  runApp.cmd  saeCalculator.code-workspace  saeCalculator.spec
.cursor/rules/: projectCore.mdc  pythonStandards.mdc  qtGui.mdc
.github/workflows/: build.yml
docs/: CNAME  app.js  index.html  manifest.json  style.css  sw.js
src/saeCalculator/: __init__.py  appConfig.py  main.py
src/saeCalculator/models/: __init__.py
src/saeCalculator/services/: __init__.py  calculatorEngine.py
src/saeCalculator/ui/: __init__.py  calculatorWidget.py  mainWindow.py  theme.py  toggleSwitch.py
tests/: conftest.py
tests/testServices/: testCalculatorEngine.py
tests/testUi/: testCalculatorWidget.py  testMainWindow.py
tools/: generateCompanyMark.py  generateIcon.py
