[project]
name = "saeCalculator"
version = "1.1.0"
description = "Calculator for fractional computation needed during DIY projects (PySide6)"
requires-python = ">=3.14"
dependencies = [
    "PySide6>=6.6,<7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9",
    "pytest-qt>=4.4,<5",
    "ruff>=0.4,<1",
]
build = [
    "pyinstaller>=6.16,<7",
    "pillow>=10,<12",
]

[project.scripts]
saeCalculator = "saeCalculator.main:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
qt_api = "pyside6"
python_files = ["test*.py"]
python_functions = ["test*"]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/saeCalculator"]
